# FAST-VQA-and-FasterVQA

./: MANIFEST.in  pyproject.toml  setup.py
UNKNOWN.egg-info/: SOURCES.txt
fastvqa/: version.py
fastvqa_options/fast/: f3dvqa-b.yml  fast-m.yml
options/fast/: fastervqa-ms.yml
src/fastvqa.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
