
[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "fastvqa"
version = "1.0.0"
description = "Very Efficient End-to-End VQA Toolbox"
requires-python = ">=3.8"
dependencies = [
    "torch",
    "torchvision",
    "opencv-python",
    "decord",
    "matplotlib",
    "scipy",
    "numpy",
    "tqdm",
    "timm",
    "einops",
    "clip",
    "sk-video",
]


[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
fastvqa = ["*.yml"]
